Added a test function

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -11,12 +11,26 @@
      "text": [
       "Hello\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "a = \"Hello\"\n",
     "\n",
-    "print(a)"
+    "print(a)\n",
+    "\n",
+    "def testfunc(a, b):\n",
+    "    c = a + b\n",
+    "    return c * 2"
    ]
   }
  ],
